@@ -370,6 +370,11 @@ Flag GMP
   Default:      False
   manual:       True
 
+Flag curses
+  Description:  Use Curses to get the screen width
+  Default:      False
+  manual:       True
+
 -- This flag determines whether to show Git hashes in version strings
 -- Defaults to True because Hackage is a source release
 Flag release
@@ -449,6 +454,7 @@ Library
 
                 , Pkg.Package
                 , Util.DynamicLinker
+                , Util.ScreenSize
 
   Other-modules:
                   Util.Pretty
@@ -529,6 +535,9 @@ Library
   if flag(GMP)
      build-depends: libffi
      cpp-options:   -DIDRIS_GMP
+  if flag(curses)
+     build-depends: hscurses
+     cpp-options:   -DCURSES
 
 Executable idris
   Main-is:        Main.hs
